# desktop-transcription-app

./: README.md
desktop-transcription-app/: package-lock.json  package.json
desktop-transcription-app/public/: ptt-processor.js
desktop-transcription-app/src/: App.jsx
desktop-transcription-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-transcription-app/src-tauri/src/: main.rs
desktop-transcription-app/src/components/: PushToTalk.jsx  TranscriptBox.jsx  style.css
