[package]
name = "desktop_transcription_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async + WebSocket
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Logging
log = "0.4"
tauri-plugin-log = "2"


